# RGK

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: docs.yml
.rgk-localnet/kaspa-simnet/datadir/consensus/consensus-001/: 000008.sst  IDENTITY  LOG  LOG.old.1782646987455442  LOG.old.1782646987458416  MANIFEST-000014  OPTIONS-000012  OPTIONS-000016
.rgk-localnet/kaspa-simnet/datadir/meta/: 000008.sst  IDENTITY  LOG  LOG.old.1782646987451905  MANIFEST-000010
.rgk-localnet/kaspa-simnet/datadir/utxoindex/: 000008.sst  IDENTITY  LOG  LOG.old.1782646987463045  MANIFEST-000010  OPTIONS-000012
crates/rgk-asset/: Cargo.toml
crates/rgk-asset/src/: lib.rs  native.rs
crates/rgk-core/: Cargo.toml
crates/rgk-core/src/: bytes.rs  chain.rs  commit.rs  encoding.rs  error.rs  lib.rs  policy.rs  tests.rs  types.rs
crates/rgk-covenant/: Cargo.toml
crates/rgk-covenant/benches/: covenant_hot_paths.rs
crates/rgk-covenant/src/: lib.rs
crates/rgk-indexer/: Cargo.toml
crates/rgk-indexer/benches/: indexer_hot_paths.rs
crates/rgk-indexer/src/: lib.rs
crates/rgk-kaspa/: Cargo.toml
crates/rgk-kaspa/src/: lib.rs  wrpc.rs
crates/rgk-receipt/: Cargo.toml
crates/rgk-receipt/benches/: receipt_hot_paths.rs
crates/rgk-receipt/src/: lib.rs
crates/rgk-resolver/: Cargo.toml
crates/rgk-resolver/src/: lib.rs
crates/rgk-sync/: Cargo.toml
crates/rgk-sync/src/: lib.rs
crates/rgk-tx/: Cargo.toml
crates/rgk-tx/src/: lib.rs
crates/rgk-walletd/: Cargo.toml
crates/rgk-walletd/src/: main.rs
crates/rgk-zk/: Cargo.toml
crates/rgk-zk/src/: lib.rs  real_zk.rs
docs/: ADVERSARIAL-SCENARIOS.md  API-DEPRECATION.md  ARCHITECTURE.md  AVATO-WALLETD.md  COVENANT-SPEC.md  E2E.md  INTEGRATION.md  INTRODUCTION.md  LANE-CALCULUS.md  MAINNET-LAUNCH.md  RECEIPT-SPEC.md  ROADMAP.md  SECURITY.md  TESTNET-STAGING-REPORT.md  UNSAFE-AUDIT.md  VERIFICATION-BUDGET.md  ZK-BOUNDARY.md  ZK-PROOF-PLAN.md
docs/assets/: extra.css
docs/audits/: public-api-surface.md
docs/wiki/: Glossary.md  Home.md  _Sidebar.md
docs/wiki/Concepts/: Architecture.md  Bounded-Objects.md  Continuation.md  Funding.md  Identity.md  Privacy.md  Production-Allocation-Strategy.md  Resolver.md  Walletd-Boundary.md
docs/wiki/Reference/: API-Stability-Policy.md  API-Surface-Audit.md  Adversarial-Scenarios.md  Covenant-Spec.md  Lane-Calculus.md  Receipt-Spec.md  Resolver-State-Machine.md  Roadmap.md  Status.md  Testnet-Staging-Snapshot.md  Threat-Model.md  Unsafe-Audit.md  ZK-Boundary.md  ZK-Proof-Plan.md
docs/wiki/Runbook/: E2E.md  Funding.md  Launch-Gates.md
docs/wiki/Tutorials/: Tutorial-0-10-Minute-Fixture-Walkthrough.md  Tutorial-1-What-RGK-Actually-Is.md  Tutorial-2-Receipts.md  Tutorial-3-Integrate-A-Wallet.md  Tutorial-4-Run-E2E-Harness.md  Tutorial-5-Operate-Walletd.md  index.md
docs/wiki/recon/: RECON-CODEBASE.md  RECON-DOCS.md  RECON-RUNTIME.md  Sidebar-Legacy.md
examples/: README.md  contract-matrix.tsv
examples/silverscript/: advanced_covenant_policy_shapes.sil  allocation_audit_certificate_recovery.sil  burn_authorised_lifecycle.sil  fungible_batch_transfer_shapes.sil  metadata_ownership_guardrails.sil  nft_collection_policy_shapes.sil  nft_marketplace_sale_policy.sil  owner_control_policy_shapes.sil  policy_migration_recovery.sil  private_lane_asset_lifecycle.sil  private_lane_graph_discovery.sil  proof_policy_guardrails.sil  public_lineage_opt_in.sil  rgk_covenant_continuation_policy.sil
examples/silverscript/artifacts/: advanced_covenant_policy_shapes.json  allocation_audit_certificate_recovery.json  burn_authorised_lifecycle.json  fungible_batch_transfer_shapes.json  manifest.tsv  metadata_ownership_guardrails.json  nft_collection_policy_shapes.json  nft_marketplace_sale_policy.json  owner_control_policy_shapes.json  policy_migration_recovery.json  private_lane_asset_lifecycle.json  private_lane_graph_discovery.json  proof_policy_guardrails.json  public_lineage_opt_in.json  rgk_covenant_continuation_policy.json
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: receipt_decode.rs
scripts/: build-kaspa.sh  devnet-toccata-overrides.json  e2e-devnet.sh  e2e-internal-readiness.sh  e2e-local.sh  e2e-privacy-observer.sh  e2e-testnet-staging.sh  run-kaspa-devnet.sh  run-kaspa-local.sh  setup-external.sh  verify-avato-walletd-contract.sh  verify-devnet-evidence.sh  verify-example-matrix.sh  verify-internal-readiness-evidence.sh  verify-launch-readiness.sh  verify-native-terminology.sh  verify-privacy-observer-evidence.sh  verify-silverscript-artifacts.sh  verify-testnet-funding-readiness.sh  verify-testnet-staging-evidence.sh  verify-testnet-staging-preflight.sh  verify-testnet-staging-wallets.sh
tests/rgk-e2e/: Cargo.toml
tests/rgk-e2e/benches/: local_e2e.rs
tests/rgk-e2e/src/: lib.rs
tests/rgk-e2e/tests/: covenant_script_vm.rs  example_matrix.rs  live_covenant.rs  live_devnet.rs  live_kaspa.rs  zk_precompile_vm.rs
