[package]
name = "rgk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
rgk-core = { path = "../crates/rgk-core" }
rgk-receipt = { path = "../crates/rgk-receipt" }

[[bin]]
name = "receipt_decode"
path = "fuzz_targets/receipt_decode.rs"
test = false
doc = false
bench = false
