[package]
name = "rgk-covenant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RGK Kaspa Toccata covenant state object + covenant script builder"

[dependencies]
rgk-core.workspace = true
rgk-receipt.workspace = true
thiserror.workspace = true
sha2.workspace = true

[dev-dependencies]
criterion = "0.7"
proptest = "1"

[features]
default = ["std"]
std = []

[[bench]]
name = "covenant_hot_paths"
harness = false
