[package]
name = "rgk-tx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RGK transaction builders — initial covenant UTXO, transition tx, receipt-bound spend, fee/change outputs"

[dependencies]
rgk-core.workspace = true
rgk-receipt.workspace = true
rgk-covenant.workspace = true
thiserror.workspace = true
sha2.workspace = true
kaspa-hashes = { path = "../../../rusty-kaspa/crypto/hashes", default-features = false }
bitflags = "2"

[dev-dependencies]
borsh = "1.7"
kaspa-consensus-core = { path = "../../../rusty-kaspa/consensus/core", default-features = false }
