[package]
name = "rgk-walletd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local RGK wallet HTTP daemon for Avato and other non-custodial frontends"

[dependencies]
argon2.workspace = true
axum = { version = "0.8", features = ["json"] }
bip39.workspace = true
chacha20poly1305.workspace = true
clap = { version = "4", features = ["derive", "env"] }
getrandom.workspace = true
hex.workspace = true
kaspa-addresses.workspace = true
rgk-core = { workspace = true, features = ["serde"] }
rgk-indexer = { workspace = true, features = ["persistent"] }
rgk-kaspa = { workspace = true, features = ["wrpc"] }
rgk-receipt = { workspace = true }
rgk-resolver = { workspace = true }
rgk-sync = { workspace = true, features = ["wrpc"] }
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
zeroize.workspace = true

[[bin]]
name = "rgk-walletd"
path = "src/main.rs"
